Update to methods paper to include Vargo's edits

--- a/methodsPaper/lib/materialsAndMethods.Rnw
+++ b/methodsPaper/lib/materialsAndMethods.Rnw
@@ -1,16 +1,16 @@
-<<load, echo = FALSE, eval = FALSE>>=
-setwd("~/GHI/methodsPaper")
-NHTS <- readRDS(file = "../R/data/NHTS.rds")
-head(NHTS)
-@ 
-
-As with the original ITHIM implementation we employ a comparative risk
-analysis (CRA) across scenarios defined by mean active transportation
-time, i.e., walking and cycling.  To do so we estimate the
-proportional change in disease burden between a baseline model and an
-alternative scenario, namely the population attributable fraction,
-$\af$.  The population attributable fraction is defined below and
-computed for each disease included in the model.
+As with the original ITHIM implementation we, employed a comparative
+risk assessment (CRA) across scenarios defined by mean active
+transportation time, i.e., combined walking and cycling.  To do so we
+investigate the proportional change in national disease burden between
+the baseline model and a given alternative scenario, i.e., the
+population attributable fraction, $\af$.  The population attributable
+fraction is defined below and computed for each disease (ICD-10)
+included in the model, namely Breast Cancer (C50), Colon Cancer
+(C18-C21), Dementia (G30), Diabetes (E10-E14) and Cardiovascular
+disease (I10, I12, I15, I20-I25, I30-I31, I33, I40).  We also include
+the disability impacts of depression, though it is not listed as a
+cause of death in CDC's data. For readability we omit an index
+indicating disease.
 
 \begin{equation}
 \af_j = \frac{\int \! R_j(x)P(x) \, \mathrm{d}x  - \int \! R_j(x)Q(x) \,
@@ -38,7 +38,7 @@ X_{ij}^{\mathrm{non-travel}} \sim \logNormalMath\left(\mu_{ij}, \gamma \mu_{ij}\
 Within each age-sex class the non-travel-related exposure is modeled
 with a \logNormal{} distribution.  The age-sex specific mean ratios,
 $r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
-American Time USe Survey data \cite{ATUS}.
+American Time Use Survey data \cite{ATUS}.
 
 
 \paragraph{Travel-Related Physical Activity}
@@ -50,6 +50,8 @@ with constant coefficient of variation across age-sex classes.
 Travel-related exposure is estimated from active transport time using
 assumptions about how much physical activity is required for cycling
 and walking.
+
+
 
 %To estimate the disease burden we first approximate the population
 %attributable fraction through a discretization of the integral in
@@ -105,11 +107,11 @@ other datsets (NHTS, ATUS, CDC WONDER) to ensure consistency in our
 estimates for input parameters.
 
 To test the new implementation of ITHIM's active transportation
-component, we used the UW national metro population estimates for
+component, we used the US national metro population estimates for
 active travel time (walking and cycling) as the baseline. We obtained
 active travel time input parameters for alternate scenarios using
 states with large sample sizes. From these examples we were able to
-approximate low and high active travel scenarios. Finally we applied
+approximate low and high active travel scenarios. Finally, we applied
 these active travel times to the US metro population to perform the
 comparative risk assessment against the baseline US numbers. We then
 examined the sensitivity of disease burden estimates to input
@@ -131,3 +133,4 @@ parameters including the active travel time and non-travel activity.
     DALYs for each of the six diseases included in the model.
   }\label{fig3}
 \end{sidewaysfigure}
+
