--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -14,14 +14,17 @@ Mon Dec  5 11:59:42 2016
 Mon Dec  5 12:22:45 2016
 ** Pomodoro #6
 Mon Dec  5 12:44:56 2016
-
+** Pomodoro #7
+Mon Dec  5 13:20:33 2016
+** Pomodoro #8
+Mon Dec  5 13:48:23 2016
+** Pomodoro #9
 
 * Create Pomodoro List & Misc Personal [X]
 
-* Cambridge Trip Details [X] [X] [X] [ ] 
+* Cambridge Trip Details [X] [X] [X] [ ]
 ** TODO Email Woodcock
-** Outline
-*** TODO Confirm dates with Julie
+** DONE Confirm dates with Julie
 Julie
 ~~~~~
 Tuesday, 1/24 - 1/25 Madison -> Geneva
@@ -47,11 +50,13 @@ Kids
 Thursday, 1/25 - 2/2 (Steve & Linda)
 Wednesday, 2/2 - 2/10 (Julie only)
 
-* Misc. [X]
-** TODO Merge Vargo's edits
-** TODO Inspect statewise GBD values from Vargo
 
-** TODO Doodle poll for Holiday party
+* Misc. [X] [X] [X]
+** DONE Merge Vargo's edits
+** DONE Post methods paper for Vargo's inspection
+** DONE Inspect statewise GBD values from Vargo
+** DONE Doodle poll for Holiday party
+
 * MI and WI vs. CA and NY analysis [ ]
 *** TODO Create new figure
 
@@ -59,14 +64,14 @@ Wednesday, 2/2 - 2/10 (Julie only)
 
 * Update methods paper To-Do List [ ]
 
-* Edit methods paper [ ] x 8 
+* Edit methods paper [ ] x 8
 ** Materials & Methods [ ] [ ]
 ** Introduction & Abstract [ ]
 ** Results [ ] [ ]
 ** Conclusions [ ] [ ]
 * Create a six-month plan for work at GHI [ ]
 
-* ITHIM Suite of R Packages 
+* ITHIM Suite of R Packages
 Four working and documented R packages on GitHub
 ** ITHIM
 Define classes and store default parameters
