--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -274,6 +274,35 @@ colnames(METmatrix) <- c("M","F")
 METmatrix
 ```
 
+## GBD Estimates by State
+
+
+
+
+```{r stateBurden, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
+
+stateNameToAbbrev <- function( stateName ){
+  stateAbbrevMatrix <- matrix(c("Alabama","AL","Alaska","AK","Arizona","AZ","Arkansas","AR","California","CA","Colorado","CO","Connecticut","CT","Delaware","DE","District of Columbia","DC","Florida","FL","Georgia","GA","Hawaii","HI","Idaho","ID","Illinois","IL","Indiana","IN","Iowa","IA","Kansas","KS","Kentucky","KY","Louisiana","LA","Maine","ME","Maryland","MD","Massachusetts","MA","Michigan","MI","Minnesota","MN","Mississippi","MS","Missouri","MO","Montana","MT","Nebraska","NE","Nevada","NV","New Hampshire","NH","New Jersey","NJ","New Mexico","NM","New York","NY","North Carolina","NC"," North Dakota","ND","Ohio","OH","Oklahoma","OK","Oregon","OR","Pennsylvania","PA","Rhode Island","RI","South Carolina","SC","South Dakota","SD","Tennessee","TN","Texas","TX","Utah","UT","Vermont","VT","Virginia","VA","Washington","WA","West Virginia","WV","Wisconsin","WI","Wyoming","WY"), byrow = TRUE, ncol = 2)
+
+  stateAbbrev <- stateAbbrevMatrix[,2]
+  names(stateAbbrev) <- as.character(stateAbbrevMatrix[,1])
+  return(stateAbbrev[stateName])
+}
+
+gbdParse <- function(gbd){
+  gbdListTemp <- split(gbd,gbd$disease)
+  gbdListTemp[["CVD"]] <- data.frame(disease = "CVD", gbdListTemp$IHD[,c("sex",  "ageClass")], gbdListTemp$IHD[,c("dproj","yll","yld","daly")] + gbdListTemp$InflammatoryHD[,c("dproj","yll","yld","daly")] + gbdListTemp$HHD[,c("dproj","yll","yld","daly")])
+  gbdListTemp2 <- lapply(gbdListTemp,function(x) split(x,as.factor(x$sex)))
+  gbdListTemp2 <- lapply(gbdListTemp2, function(x) list(M=x$M,F=x$F))
+  return(gbdListTemp2)
+}
+
+gbdRDS <-  readRDS(file = "./data/stateMetroBurdens2014.rds")
+gbdRDS <- within(gbdRDS, state <- stateNameToAbbrev(state))
+gbdByState <- split(gbdRDS,gbdRDS$state)
+gbdList <- lapply(gbdByState, gbdParse)
+
+```
 
 
 
@@ -564,3 +593,4 @@ p + theme_bw() + scale_y_continuous(name="DALYs Averted (thousands)") + facet_gr
 
 #+ theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
 ```
+
