--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -5,17 +5,18 @@ week)
 * Schedule
 ** Set 1
 *** Pomodoro #1
-1:00
+    Wed 07 Dec 2016 01:04:02 PM CST
 *** Pomodoro #2
-1:20
+    Wed 07 Dec 2016 01:25:12 PM CST
 *** Pomodoro #3
-1:40
+    Wed 07 Dec 2016 01:47:45 PM CST
 ** Long Break
+Wed 07 Dec 2016 02:03:28 PM CST
 ** Set 2
 *** Pomodoro #4
-2:00
+Wed 07 Dec 2016 02:18:15 PM CST
 *** Pomodoro #5
-2:20
+Wed 07 Dec 2016 02:40:42 PM CST
 *** Pomodoro #6
 2:40
 ** Long Break
@@ -25,21 +26,19 @@ week)
 *** Pomodoro #8
 3:20
 *** Pomodoro #9
-3:40
+    3:40
 * Current Pomodoro List
-** Create Pomodoro List and Misc. [ ]
-*** Misc
-**** TODO Make files available for Maggie
-Introduction and Discussion
-**** TODO Email Mom
-Re: Christmas and Madison Trip
-** MI, WI, OH Analysis [ ] x 2
+** Create Pomodoro List and Misc. [X]
+** MI, WI, OH Analysis [X] [X] [X] [ ] [ ]
 *** TODO Create new figure
 ** Edit methods paper [ ] x 3
-*** TODO Materials & Methods (Sam)
-*** TODO Abstract (Sam)
-*** TODO Results (Sam)
-** Update methods paper To-Do List [ ]
+*** TODO Update methods paper To-Do List
+*** TODO Materials & Methods
+*** TODO Abstract
+*** TODO Results
+** Incorporate Air Pollution [ ] [ ]
+** ITHIM Meeting [ ]
+*** TODO Add agenda
 * Future Pomodoro List
 ** Cambridge Trip Details [ ]
 *** TODO Reserve tickets
@@ -49,9 +48,10 @@ Re: Christmas and Madison Trip
 *** TODO Book airfare from Amsterdam to London
 *** TODO Travel arrangements from Amsterdam <-> Wijk aan Zee
 
+** Create ITHIM class [ ] [ ]
+** Create CRA method [ ] [ ]
+** Action Items from Friday meeting with Vargo [ ]
 ** Create a six-month plan for work at GHI [ ]
-** ITHIM Meeting [ ]
-*** TODO Add agenda items
 * Completed Pomodoro List
 ** Admin
 *** DONE Email Jonathan previous appointment letter
@@ -75,6 +75,10 @@ Re: Christmas and Madison Trip
 *** DONE Inspect statewise GBD values from Vargo
 *** DONE Doodle poll for Holiday party
 *** DONE Email about benefits eligibility
+*** DONE Email Mom
+Re: Christmas and Madison Trip
+*** DONE Make files available for Maggie
+Introduction and Discussion
 ** Cambridge Trip Details
 *** DONE Email Jonathan/Monet to confirm purchase of airfare
     Mentions the Amsterdam arrival
