--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -377,10 +377,19 @@ names(D) <- c("disease","sex","ageClass","type", "burden", "sex2", "disease2", "
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 D <- within(D, state <- factor(state, levels = c("WI","MI","OH","NY","CA")))
 
-p <- ggplot(subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD") & type == "daly"), aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
-p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Nationwide (thousands)") + theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( disease ~ state, scales = "free_y)"
+D <- subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD"))
+D <- subset(D, as.character(state) %in% c("WI","MI","OH"))
+D <- subset(D, type == "daly")
+
+p <- ggplot(D, aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
+p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs (thousands)") + theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( disease ~ state, scales = "free_y")
 ```
 
+```{r rustBelt, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = FALSE}
+
+
+
+```
 
 ### Visualization of trip time matrices
 
