--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -38,7 +38,7 @@ First we use NHTS to estimate mean walking and cycling times.
 ### NHTS
 
 ```{r compute, echo = FALSE, eval = TRUE}
-compute <- TRUE
+compute <- FALSE
 ```
 
 #### Create a handful of functions to help parse data
@@ -385,8 +385,34 @@ p <- ggplot(D, aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "
 p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs (thousands)") + theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( disease ~ state, scales = "free_y")
 ```
 
-```{r rustBelt, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = FALSE}
+```{r rustBelt, eval = TRUE, dev=c('pdf', 'png'), fig.width = 2*fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = FALSE}
 
+ITHIMListScenario <- lapply(ITHIMList, function(ithim) updateITHIM(ithim, parName = "muwt", parValue = ithim$parameters$muwt + 10*7)) 
+
+deltaDALYList <- mapply(sumDALY, ITHIMList, ITHIMListScenario)
+
+
+getDALY <- function( ITHIM ){
+foo <- data.frame(lapply(ITHIM$parameters$GBD, function(x) x$M$daly + x$F$daly))
+sum(foo[,names(foo) %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD")])
+}
+
+burdenList <- lapply(ITHIMList, getDALY)
+foo <- data.frame(daly = unlist(burdenList), delta = deltaDALYList)
+foo <- within(foo, {
+  daly <- daly + delta
+  delta <- -delta
+  state <- names(burdenList)
+})
+
+foo <- subset(foo, state %in% c("WI", "MI","OH"))
+
+D <- melt(foo)
+
+cbPalette <- c("#0072B2", "#56B4E9", "#999999", "#E69F00", "#009E73", "#F0E442", "#D55E00", "#CC79A7")
+
+p <- ggplot(D, aes(state, value/1e3, fill = variable))
+p + geom_bar(stat= "identity") + scale_x_discrete(name="") + scale_y_continuous(name="Thousands of DALYs") + guides(fill=FALSE) + scale_fill_manual(values=cbPalette) + coord_cartesian(ylim = c(175, 600)) + theme(axis.text.y  = element_text(size = 16)) + theme(axis.text.x  = element_text(size = 16), axis.title.x  = element_text(size = 16)) + coord_flip() 
 
 
 ```
