--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -310,14 +310,9 @@ gbdList <- lapply(gbdByState, gbdParse)
 ## Create List of ITHIM Objects
 
 
-```{r foobar, eval = TRUE, echo = FALSE}
-sumDALY <- function(ITHIM.baseline, ITHIM.scenario){
-    return(sum(unlist(data.frame(compareModels(ITHIM.baseline,ITHIM.scenario)$daly.delta)[-1,]))) # AgeClass 1 is removed from totals
-    }
-```
-
 ```{r ITHIMObjs, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
-stateVec <- c("CA","NY","WI","MI","OH") #c("CA","TX","NY","FL","VA","NC","AZ")
+stateVec <- names(listOfLists) #c("CA","NY","WI","MI","OH") #c("CA","TX","NY","FL","VA","NC","AZ")
+stateVec <- stateVec[stateVec != "ND"]
 stateVecOrdered <- stateVec #c("NY","CA","WI","MI","OH") #c("NC","TX","VA","FL","AZ","NY","CA")
 
 upper <- 10; length <- 2; wd <- upper/length;
@@ -325,25 +320,14 @@ upper <- 10; length <- 2; wd <- upper/length;
 DALYsTotal <- data.frame()
 ITHIMList <- list()
 ITHIM.default <- createITHIM()
-ITHIM.default <- update(ITHIM.default, "cvNonTravel", 3)
-ITHIM.default <- update(ITHIM.default, "cv", 1.65)
-ITHIM.default <- update(ITHIM.default, "muNonTravel", 4)
-ITHIM.default <- update(ITHIM.default, "muNonTravelMatrix", METmatrix)
-ITHIM.default <- update(ITHIM.default, "quantiles", (1:99)/100)
 
-ITHIM.national <- ITHIM.default
-ITHIM.national <- update(ITHIM.national, "muwt", muwtNational)
-ITHIM.national <- update(ITHIM.national, "muct", muctNational)
-ITHIM.national <- update(ITHIM.national, "Rwt", RwtNational)
-ITHIM.national <- update(ITHIM.national, "Rct", RctNational)
+ITHIM.default <- update(ITHIM.default, list( cvNonTravel = 3, cv = 1.65, muNonTravel = 4, muNonTravelMatrix = METmatrix, quantiles = (1:99)/100 ) )
+
+ITHIM.national <- update(ITHIM.default, list(muwt = muwtNational, muct = muctNational, Rwt = RwtNational, Rct = RctNational))
 
 for (HHSTATE in stateVec){
     ITHIMList[[HHSTATE]] <- ITHIM.default
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "muwt", muwtList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "muct", muctList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "Rwt", RwtList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "Rct", RctList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "GBD", gbdList[[HHSTATE]])
+    ITHIMList[[HHSTATE]] <- update(ITHIM.default, list(muwt = muwtList[[HHSTATE]], muct = muctList[[HHSTATE]], Rwt = RwtList[[HHSTATE]], Rct = RwtList[[HHSTATE]], GBD = gbdList[[HHSTATE]]))
   }
 
 for( muNonTravel in seq(0, upper, by = wd)){
@@ -351,7 +335,7 @@ for( muNonTravel in seq(0, upper, by = wd)){
   rm(DALYs)
 
   for (HHSTATE in stateVec){
-    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], "muNonTravel", muNonTravel)
+    ITHIMList[[HHSTATE]] <- update(ITHIMList[[HHSTATE]], list(muNonTravel = muNonTravel))
   }
 
   ITHIM.national <- update(ITHIM.national, "muNonTravel", muNonTravel)
